<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/edit_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_url"
        android:text="@string/default_url"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:inputType="textUri"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/button_webview"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button"
        android:text="@string/button_text_webview"/>

    <Button
        android:id="@+id/button_external"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button"
        android:text="@string/button_text_browser"/>

    <Button
        android:id="@+id/button_chrome_custom_tab"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button"
        android:text="@string/button_text_chrome"/>

</LinearLayout>
